Improved notification design on mobile view, redirect bug fixes

--- a/static/css/responsive/smartphones.css
+++ b/static/css/responsive/smartphones.css
@@ -164,4 +164,8 @@
         width: 90vw;
         height: 30vh;
     }
+
+    .notification {
+        padding: 10px 5px;
+    }
 }
